--- a/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioFormBasic.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioFormBasic.zul
@@ -1,3 +1,5 @@
+<?component name="uploadImageSingle" macroURI="/assets/theme/components/upload_image_single.zul"?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
@@ -7,7 +9,7 @@
 		<div class="row">
 			<div sclass="col s12 form">
 			
-				<tabbox id="tb" class="rtab">
+				<tabbox id="tb" class="rtab ltab">
 					<tabs id="tabs">
 						<tab id="tabDatosPersonales" label="Datos personales" selected="true" />
 						<tab id="tabContacto" label="Información de contacto" />
@@ -17,53 +19,61 @@
 						<tabpanel>
 			
 							<div class="input-field col s6">
-								<n:label for="nombre">Nombre</n:label>
-								<textbox id="nombre" type="text" value="@bind(vm.voluntario.fkPersona.nombre)"> </textbox>
+								<n:label for="nombre" class="mandatory">Nombre</n:label>
+								<textbox id="nombre" type="text" value="@bind(vm.persona.nombre)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
-								<n:label for="apellido">Apellido</n:label>
-								<textbox id="apellido" type="text" value="@bind(vm.voluntario.fkPersona.apellido)"> </textbox>
+								<n:label for="apellido" class="mandatory">Apellido</n:label>
+								<textbox id="apellido" type="text" value="@bind(vm.persona.apellido)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
-								<n:label for="identificacion">Cedula</n:label>
-								<textbox id="identificacion" type="text" value="@bind(vm.voluntario.fkPersona.identificacion)"> </textbox>
+								<n:label for="tipo_persona" class="active">Tipo de persona</n:label>
+								<combobox id="tipo_persona" readonly="true" model="@bind(vm.tipoPersonaEnums)" selectedItem="@bind(vm.tipoPersonaEnum)">
+									<template name="model">
+										<comboitem label="@load(each)" />
+									</template>
+								</combobox>
 							</div>
 							
 							<div class="input-field col s6">
-								<n:label class="active" for="fk_estado"> Ciudad </n:label>
-								<combobox id="fk_ciudad" readonly="true" model="@bind(vm.ciudades)" selectedItem="@bind(vm.voluntario.fkPersona.fkCiudad)">
+								<n:label for="identificacion" class="mandatory">Cedula</n:label>
+								<textbox id="identificacion" type="text" value="@bind(vm.persona.identificacion)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
+								<datebox id="db" cols="20" format="yyyy/MM/dd" value="@bind(vm.fechaNacimiento)"/>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="sexo" class="active">Sexo</n:label>
+								<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.sexoEnum)">
+									<template name="model">
+										<comboitem label="@load(each)" />
+									</template>
+								</combobox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label class="active"	for="fk_estado">Estado</n:label>
+								<combobox id="fk_estado" readonly="true" placeholder="Seleccione un estado" instant="true" onSelect="@command('changeEstado')" model="@bind(vm.estados)" selectedItem="@bind(vm.estado)">
+									<template name="model">
+										<comboitem label="@load(each.nombre)" />
+									</template>
+								</combobox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="fk_ciudad">Ciudad</n:label>
+								<combobox id="fk_ciudad" readonly="true" placeholder="Seleccione una ciudad" disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)" selectedItem="@bind(vm.persona.fkCiudad)">
 									<template name="model">
 										<comboitem label="@load(each.nombre)" />
 									</template>
 								</combobox>
 							</div>
 							
-							<div class="input-field col s6">
-								<n:label for="imagen">Imagen</n:label>
-								<textbox id="imagen" type="text" value="@bind(vm.voluntario.fkPersona.fkMultimedia)"> </textbox>
-							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="sexo" class="active">Sexo</n:label>
-								<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.voluntario.fkPersona.sexo)">
-									<template name="model">
-										<comboitem label="@load(each)" />
-									</template>
-								</combobox>	
-							</div>
-
-							<div class="input-field col s6">
-								<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
-								<datebox id="db" cols="20" format="yyyy/MM/dd" value="@bind(vm.voluntario.fkPersona.fechaNacimiento)"/>
-							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="direccion">Dirección</n:label>
-								<textbox id="direccion" type="text" value="@bind(vm.voluntario.fkPersona.direccion)"> </textbox>
-							</div>
-				
 							<div class="input-field col s6">
 								<n:label for="fecha_ingreso" class="active">Fecha de ingreso</n:label>
 								<datebox id="fecha_ingreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.voluntario.fechaIngreso)"/>
@@ -75,11 +85,14 @@
 							</div>
 							
 							<div class="input-field col s6">
-								<n:label for="tipo_persona" class="active">Tipo de persona</n:label>
-								<combobox id="tipo_persona" readonly="true" selectedItem="@bind(vm.voluntario.fkPersona.tipoPersona)">
-									<comboitem label="Natural" />
-									<comboitem label="Jurídica" />
-								</combobox>	
+								<n:label for="direccion">Dirección</n:label>
+								<textbox id="direccion" type="text" sclass="materialize-textarea" multiline="true" value="@bind(vm.persona.direccion)">	</textbox>
+							</div>
+							
+							<div class="col s6" style="padding:0px;">
+								<div class="input-field col s12">
+									<uploadImageSingle maxsize="9000" size="200" idUpload="1" title="Imagen del voluntario" />
+								</div>
 							</div>
 						
 						</tabpanel>
@@ -88,61 +101,54 @@
 						
 							<div class="input-field col s6">
 								<n:label for="telefono_1">Teléfono 1</n:label>
-								<textbox id="telefono_1" type="text" value="@bind(vm.voluntario.fkPersona.telefono1)"> </textbox>
+								<textbox id="telefono_1" type="text" value="@bind(vm.persona.telefono1)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="telefono_2">Teléfono 2</n:label>
-								<textbox id="telefono_2" type="text" value="@bind(vm.voluntario.fkPersona.telefono2)"> </textbox>
+								<textbox id="telefono_2" type="text" value="@bind(vm.persona.telefono2)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="twitter">Twitter</n:label>
-								<textbox id="twitter" type="text" value="@bind(vm.voluntario.fkPersona.twitter)"> </textbox>
+								<textbox id="twitter" type="text" value="@bind(vm.persona.twitter)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="instagram">Instagram</n:label>
-								<textbox id="instagram" type="text" value="@bind(vm.voluntario.fkPersona.instagram)"> </textbox>
+								<textbox id="instagram" type="text" value="@bind(vm.persona.instagram)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="linkedin">LinkedIn</n:label>
-								<textbox id="linkedin" type="text" value="@bind(vm.voluntario.fkPersona.linkedin)"> </textbox>
+								<textbox id="linkedin" type="text" value="@bind(vm.persona.linkedin)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="sitioWeb">Sitio web</n:label>
-								<textbox id="sitioWeb" type="text" value="@bind(vm.voluntario.fkPersona.sitioWeb)"> </textbox>
+								<textbox id="sitioWeb" type="text" value="@bind(vm.persona.sitioWeb)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="fax">Fax</n:label>
-								<textbox id="fax" type="text" value="@bind(vm.voluntario.fkPersona.fax)"> </textbox>
+								<textbox id="fax" type="text" value="@bind(vm.persona.fax)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="correo">Corrreo electrónico</n:label>
-								<textbox id="correo" type="text" value="@bind(vm.voluntario.fkPersona.correo)"> </textbox>
+								<textbox id="correo" type="text" value="@bind(vm.persona.correo)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="facebook">Facebook</n:label>
-								<textbox id="facebook" type="text" value="@bind(vm.voluntario.fkPersona.facebook)"> </textbox>
+								<textbox id="facebook" type="text" value="@bind(vm.persona.facebook)"> </textbox>
 							</div>
-						
 						</tabpanel>
-					
 					</tabpanels>
-				
 				</tabbox>
-				
-				
 			</div>
 		</div>
 		
-		<div id="divButtonsForm"
-			use="karen.core.form.buttons.containers.DivButtonsForm">
-		</div>
+		<div id="divButtonsForm" use="karen.core.form.buttons.containers.DivButtonsForm"> </div>
 	</div>
 </zk>
