--- a/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioIndex.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioIndex.zul
@@ -1,3 +1,5 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" signature="java.lang.String convertirLongADate(Long)"?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
@@ -10,17 +12,17 @@
 					<listbox id="listbox" model="@load(vm.objectsList)"
 						selectedItem="@bind(vm.selectedObject)">
 						<listhead sizable="true">
+							<listheader width="25%" label="Cédula" />
 							<listheader width="25%" label="Nombre" />
 							<listheader width="25%" label="Apellido" />
 							<listheader width="25%" label="Fecha de ingreso" />
-							<listheader width="25%" label="Fecha de egreso" />
 						</listhead>
 						<template name="model">
 							<listitem>
+								<listcell label="@load(each.fkPersona.identificacion)" />
 								<listcell label="@load(each.fkPersona.nombre)" />
 								<listcell label="@load(each.fkPersona.apellido)" />
-								<listcell label="@load(each.fechaIngreso)" />
-								<listcell label="@load(each.fechaEgreso)" />
+								<listcell label="${m:convertirLongADate(each.fechaIngreso)}" />
 							</listitem>
 						</template>
 						<listfoot>
