Galeria y album dinamicos

--- a/WebContent/assets/css/web/galeria.css
+++ b/WebContent/assets/css/web/galeria.css
@@ -8,6 +8,9 @@
 	text-align: center;
 	text-transform: uppercase;	
 }
+#albumes .albumes .s4:nth-child(4n) {
+   	clear: left;
+}
 
 #fotos .seccion {
 	padding: 20px 0;
@@ -28,16 +31,19 @@
 	padding: 0;
 }
 
-#albumes .albumes>.col.s4{
-    margin-bottom: 60px;
-}
-
-#albumes .albumes>.col.s4{
+#albumes .albumes .col.s4{
     text-align: justify;
+    margin-bottom: 60px;
+    float: left;
 }
 
-#albumes .albumes>.col.s4.icon{
-    text-align:center
+.box-img-album {
+	height: 200px
+}
+
+#albumes .seccion .albumes img {
+    max-height: 180px;
+	margin-bottom: 20px;
 }
 
 	
@@ -48,23 +54,27 @@
 
 .seccion .row {
 	margin-bottom: 0;
-}
-
-.seccion .fotos, .seccion .albumes {
-	text-align: center;
 	width: 75%;
 }
 
-.galeria .seccion img {
+.seccion .fotos, .seccion .icon {
+	text-align: center;
+}
+
+.galeria #fotos .seccion img {
 	height: 100%;
 	width: 100%;
 	margin-bottom: 20px;
 }
     
-.galeria .seccion .icon img {
+.galeria #fotos .seccion .icon img, .galeria #albumes .seccion .icon img {
 	height: initial;
 	width: initial;
 	margin-bottom: 30px;
+}
+
+.galeria #albumes .seccion .icon img {
+	margin-top: 30px;
 }
 
 .galeria .seccion .icon a {
