--- a/WebContent/views/web/album.zul
+++ b/WebContent/views/web/album.zul
@@ -3,10 +3,10 @@
 		type="text/css">
 	</n:link>
 	<div class="container-fluid album" apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_Main')">
+		viewModel="@id('vm') @init('ve.smile.web.viewmodels.albumes.VM_Album')">
 		<div class="row" width="90%">
 			<div class="col s12 title text-center">
-				<span>Vendimia 2015</span>
+				<label value="@load(vm.album.titulo)"></label>
 			</div>
 			<div class="col s12 volver">
 				<a href="" onClick="@command('galeria')">
@@ -16,15 +16,16 @@
 			</div>
 			<div class="col s12 text-center detalle">
 				<div sclass="info">
-					<label value="12 fotos"></label>
+					<label value="@load(vm.cant)" style="margin: 0"></label>
+					<label value="Fotos" style="margin: 0; margin-right: 10px"></label>
 				</div>
 				<span sclass="fa fa-circle"></span>
 				<div sclass="info">
-					<label value="03/07/2016"></label>
+					<label value="@load(vm.fechaPublicacionFormat)"></label>
 				</div>
 				<span sclass="fa fa-circle"></span>
 				<div sclass="info">
-					<label value="lugar"></label>
+					<label value="@load(vm.directorio)"></label>
 				</div>
 			</div>
 			<div class="col s12 text-center citas">
@@ -40,54 +41,22 @@
 			</div>
 			<div class="col s12 descrip">
 				<label
-					value="Reina en mi espíritu una alegría admirable, muy parecida a las dulces alboradas de la primavera, de que gozo aquí con delicia. Estoy solo, y me felicito de vivir en este país, el más a propósito para almas como la mía, soy tan dichoso, mi querido amigo, me sojuzga de tal modo la idea de reposar, que no me ocupo de mi arte. Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin">
+					value="@load(vm.album.descripcion)">
 				</label>
 			</div>
 			<div class="col s12 fotos">
 				<n:div id="fotos">
 					<div class="row">
 						<div class="col s12">
-							<div class="row">
-								<div class="col s4">
-									<image
-										src="/imagenes/portal/galeria1.png"
-										sclass="materialboxed img-responsive">
-									</image>
-								</div>
-								<div class="col s4">
-									<image
-										src="/imagenes/portal/galeria2.png"
-										sclass="materialboxed img-responsive">
-									</image>
-								</div>
-								<div class="col s4">
-									<image
-										src="/imagenes/portal/galeria3.jpg"
-										sclass="materialboxed img-responsive">
-									</image>
-								</div>
-							</div>
-						</div>
-						<div class="col s12">
-							<div class="row ">
-								<div class="col s4">
-									<image
-										src="/imagenes/portal/galeria1.png"
-										sclass="materialboxed img-responsive">
-									</image>
-								</div>
-								<div class="col s4">
-									<image
-										src="/imagenes/portal/galeria2.png"
-										sclass="materialboxed img-responsive">
-									</image>
-								</div>
-								<div class="col s4">
-									<image
-										src="/imagenes/portal/galeria2.png"
-										sclass="materialboxed img-responsive">
-									</image>
-								</div>
+							<div class="row" children="@load(vm.multimediaalbum)">
+								<template name="children">
+									<div class="col s4">
+										<image
+											src="@load(each.fkMultimedia.url)"
+											sclass="materialboxed">
+										</image>
+									</div>
+								</template>
 							</div>
 						</div>
 					</div>
@@ -160,4 +129,14 @@
 			</div>
 		</div>
 	</div>
+
+		
+<n:script type="text/javascript">
+	$(document).ready(function() {
+	  
+	   $('.materialboxed').materialbox();
+	
+	});
+ 	
+</n:script>	
 </zk>
