--- a/WebContent/views/desktop/gestion/donativo/colaborador/ColaboradorIndex.zul
+++ b/WebContent/views/desktop/gestion/donativo/colaborador/ColaboradorIndex.zul
@@ -1,5 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="100%" class='opacity-0'
+	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.gestion.donativo.colaborador.viewmodels.VM_ColaboradorIndex')">
@@ -7,20 +7,17 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="listbox"
-						model="@load(vm.objectsList)"
-						selectedItem="@bind(vm.selectedObject)">
-
+					<listbox id="listbox" model="@load(vm.objectsList)" selectedItem="@bind(vm.selectedObject)">
 						<listhead sizable="true">
-							<listheader width="33%" label="Persona" />
-							<listheader width="33%" label="Fecha Ingreso" />
-							<listheader width="33%" label="Fecha Egreso" />
+							<listheader width="50%" label="Colaborador" />
+							<listheader width="25%" label="Fecha de ingreso" />
+							<listheader width="25%" label="Fecha de egreso" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkPersona)" />
+								<listcell label="@load(each.fkPersona.nombre)" />
 								<listcell label="@load(each.fechaIngreso)" />
-								<listcell label="@load(each.fechaEgreso)" />
+								<listcell label="@load(each.fechaSalida)" />
 							</listitem>
 						</template>
 						<listfoot>
@@ -33,7 +30,6 @@
 			</div>
 		</div>
 
-		<toolbar id="toolbar" align="center" use="karen.core.toolbar.Toolbar">
-		</toolbar>
+		<toolbar id="toolbar" align="center" use="karen.core.toolbar.Toolbar"> </toolbar>
 	</div>
 </zk>
