--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/eventoPlanificadoTareaAsignacionIndex.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/eventoPlanificadoTareaAsignacionIndex.zul
@@ -1,10 +1,11 @@
 <?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
 	signature="java.lang.String convertirLongADate(Long)" ?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.viewmodels.VM_EventoPlanificadoTareaParticiapanteIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.tarea.asignacion.viewmodels.VM_EventoPlanificadoTareaAsignacionIndex')">
 
 		<div class="row">
 			<div class="col s12">
