--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/tareaEventoPlanificadoIndex.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/tareaEventoPlanificadoIndex.zul
@@ -2,7 +2,7 @@
 	<div class="wizard ${arg.animation_} container"
 		use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.tarea.asignacion.viewmodels.VM_AsignacionTareaIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.actividades.asignacion.viewmodels.VM_ActividadesTrabajoSocialPlanificadoIndex')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard">
