--- a/WebContent/views/desktop/gestion/apadrinamiento/evaluacion/EvaluacionPostuladoIndex.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/evaluacion/EvaluacionPostuladoIndex.zul
@@ -12,15 +12,20 @@
 						<listhead sizable="true">
 							<listheader width="25%" label="Nombre" />
 							<listheader width="25%" label="Apellido" />
-							<listheader width="25%" label="Fecha de ingreso" />
+							<listheader width="25%"
+								label="Fecha de ingreso" />
 							<listheader width="25%" label="Condición" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkPersona.nombre)" />
-								<listcell label="@load(each.fkPersona.apellido)" />
-								<listcell label="@load(each.fechaIngreso)" />
-								<listcell label="@load(each.estatusPostulado)" />
+								<listcell
+									label="@load(each.fkPersona.nombre)" />
+								<listcell
+									label="@load(each.fkPersona.apellido)" />
+								<listcell
+									label="@load(each.fechaIngreso)" />
+								<listcell
+									label="@load(each.estatusPadrinoEnum)" />
 							</listitem>
 						</template>
 						<listfoot>
