--- a/WebContent/assets/css/web/postulacion.css
+++ b/WebContent/assets/css/web/postulacion.css
@@ -2,22 +2,27 @@
 	opacity: 1;
 	text-align: right;
 }
-#modalFormPostulacion .close span{
+
+#modalFormPostulacion .close span {
 	font-size: 22px;
 	color: black;
 }
 
-#modalFormPostulacion h6{
+#modalFormPostulacion h5 {
 	color: #f26b7a;
 	font-weight: bold
 }
 
-#modalFormPostulacion .form div:nth-of-type(4){
-	margin-bottom: 10px;
-}
-
-#modalFormPostulacion input:focus{
+#modalFormPostulacion input:focus {
 	border-bottom: 1px solid #8AC7DE;
 	box-shadow: 0 1px 0 0 #8AC7DE;
 }
 
+textarea.materialize-textarea {
+	max-height: 100px !important;
+}
+
+textarea.materialize-textarea:hover,textarea.materialize-textarea:active,textarea.materialize-textarea:focus
+	{
+	overflow-y: auto !important;
+}
