--- a/WebContent/views/desktop/gestion/evento/planificacion/indicadores/selectEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/indicadores/selectEventoPlanificado.zul
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el trabajo social a planificar"
+				<label value="Seleccione el evento a planificar"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -33,7 +33,7 @@
 									<listcell
 										label="@load(each.fkEvento.nombre)" />
 									<listcell
-										label="@load(each.descripcion)" />
+										label="@load(each.fkEvento.descripcion)" />
 									<listcell
 										label="@load(each.fechaPlanificada)" />
 									<listcell
