--- a/WebContent/views/desktop/gestion/evento/planificacion/registro/selectEvento.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/registro/selectEvento.zul
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el trabajo social a planificar"
+				<label value="Seleccione un evento a planificar"
 					sclass="label-medium-500">
 				</label>
 			</div>
