--- a/WebContent/views/desktop/administracion/portalweb/mensajes/contacto/ContactoFormBasic.zul
+++ b/WebContent/views/desktop/administracion/portalweb/mensajes/contacto/ContactoFormBasic.zul
@@ -8,35 +8,42 @@
 			<div sclass="col s12 form">
 							<div class="input-field col s6">
 								<n:label for="nombre">Nombre</n:label>
-								<textbox id="nombre" type="text" value="@bind(vm.contactoPortal.fkComunidad.nombre)"> </textbox>
+								<textbox id="nombre" type="text" disabled="true" value="@bind(vm.contactoPortal.fkComunidad.nombre)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="apellido">Apellido</n:label>
-								<textbox id="apellido" type="text" value="@bind(vm.contactoPortal.fkComunidad.apellido)"> </textbox>
+								<textbox id="apellido" type="text" disabled="true" value="@bind(vm.contactoPortal.fkComunidad.apellido)"> </textbox>
 							</div>
 							
 							<div class="input-field col s6">
 								<n:label for="correo">Correo</n:label>
-								<textbox id="correo" type="text" value="@bind(vm.contactoPortal.fkComunidad.correo)"> </textbox>
+								<textbox id="correo" type="text" disabled="true" value="@bind(vm.contactoPortal.fkComunidad.correo)"> </textbox>
 							</div>
 				
 							<div class="input-field col s6">
 								<n:label for="clasificador">Clasificador</n:label>
-								<textbox id="clasificador" type="text" value="@bind(vm.contactoPortal.fkClasificadorSugerencia.nombre)"> </textbox>
+								<textbox id="clasificador" type="text" disabled="true" value="@bind(vm.contactoPortal.fkClasificadorSugerencia.nombre)"> </textbox>
 							</div>
 							<div class="input-field col s6">
 								<n:label for="contenido">Contenido</n:label>
-								<textbox id="contenido" type="text" value="@bind(vm.contactoPortal.contenido)"> </textbox>
+								<textbox id="contenido" type="text" disabled="true" value="@bind(vm.contactoPortal.contenido)"> </textbox>
 							</div>
 											
 							<div class="input-field col s6">
 								<n:label for="fecha" class="active">Fecha de Creación</n:label>
-								<datebox id="fecha" cols="20" format="yyyy/MM/dd" value="@bind(vm.contactoPortal.fecha)"/>
+								<datebox id="fecha" cols="20" format="yyyy/MM/dd" disabled="true" value="@bind(vm.contactoPortal.fecha)"/>
 							</div>
+							<!-- 		
+							<div class="input-field col s6">
+								<n:label for="motivo">Motivo</n:label>
+								<textbox id="motivo" type="text" disabled="true" value="@bind(vm.contactoPortal.fkClasificadorSugerencia.nombre)"> </textbox>
+							</div>
+							
+					 -->
 							<div class="input-field col s12">
 								<n:label for="respuesta">Respuesta</n:label>
-								<textbox id="respuesta" type="text" value="@load(each.respuesta)"> </textbox>
+								<textbox id="respuesta" maxlength="400" multiline="true" type="text" class="materialize-textarea" value="@bind(vm.respuesta)"> </textbox>
 							</div>
 							
 							
