Cambios en css faq y participa. Cambios en .zul faq y partcipa Cambios en VM_participa y vm_Faq

--- a/WebContent/assets/css/web/faq.css
+++ b/WebContent/assets/css/web/faq.css
@@ -2,6 +2,10 @@
 	min-height: 300px !important;
 }
 
+.z-listitem.z-listitem-selected > .z-listcell, .z-listitem:HOVER > .z-listcell, .z-treerow-selected > .z-treecell, .z-treerow:HOVER > .z-treecell {
+    background: #87796f !important;
+    overflow: auto;
+}
 button {
 	background: #3b85a1 !important;
 }
