--- a/WebContent/assets/css/web/participa.css
+++ b/WebContent/assets/css/web/participa.css
@@ -1,94 +1,78 @@
-
-
-	.medallas {
-		margin-top: 10px;
-	}
-	
-	#comunidad .medallas .fotos {
-		position: relative;
-	}
-	
-	#comunidad .medallas .fotos img:nth-of-type(1){
-		position: absolute;     
-		width: 100px;      
-		height: 100px;    
-		top: 45px;    
-		left: 76px;
-	}
-	
-	
-	
-a:hover,a:focus {
-	text-decoration: none;
+.z-tabbox {
+	min-height: 300px !important;
 }
 
-.btn {
-	margin-bottom: 0;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 1.42857143;
-	text-align: center;
-	vertical-align: middle;
-	-ms-touch-action: manipulation;
-	touch-action: manipulation;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	background-image: none;
-	color: #ffffff;
-	background-color: #044159;
+.z-listitem.z-listitem-selected>.z-listcell,
+.z-listitem:HOVER>.z-listcell,
+.z-treerow-selected>.z-treecell,
+.z-treerow:HOVER>.z-treecell
+	{
+	background: #87796f !important;
+	overflow: auto;
+}
+
+button {
+	background: #3b85a1 !important;
+}
+
+.z-tabs {
+	min-height: 300px !important;
+}
+
+.z-tabbox-left>.z-tabpanels {
+	border: 0px;
+	border-left: 0px;
+}
+
+.z-tabbox-accordion .z-tabpanel>.z-tab {
+	border-width: 1px 1px 1px;
+	text-align: left;
+	float: none;
+	zoom: 1;
+	border-color: #F0F2DC;
+	background-color: #F0F2DC;
 	border-radius: 4px;
 }
-.participa {
-    padding: 0;
-    background-color: #e4e6e9;
-    min-height: 100%;
-    font-family: "Roboto",sans-serif !important;
-    font-size: 12px; 
-    color: #393939;
-    line-height: 1.72;
-}
-.carousel {
-	position: relative;
-	/* 	height: 235px; */
-}
-.container.menu {
-	width: 100%;
-	/* 	height: 450px; */
-	margin: 0px;
-	padding: 0px;
-}
-div.barra-verde span {
-	
-	font-weigth: bold;
-	padding-top: 7px;
-	color: #87796F;
-}
-.z-button {
-     color:  #FFF !important;
-     background-color:#044159 !important;
-}
-div.barra-verde {
-	width: 100%;
-		height: 40px !important; 
-	background-color: #d9eb52;
-	color: #F26B7A;
-	padding-top:13px;
-	
-}
-element.style {
-	/* 	height: 200px; */
-	display: block;
-}
-.info span {
-	color: #87796f;
-}
 
+.z-tabbox-accordion>.z-tabpanels>.z-tabpanel {
+	border: 0px;
+	padding: 2px;
+	margin-bottom: 10px;
+}
 
 .menuPrincipal .z-tabs {
 	background-color: #87796f;
+}
+
+.z-tabbox-left>.z-tabpanels>.z-tabpanel {
+	border: 0;
+	padding: 13px;
+}
+
+.z-tabbox-left>.z-tabs .z-tab {
+	border-width: 1px 0px 1px;
+	border-color: #F26B7A;
+	float: none;
+	border-radius: 0px !important;
+}
+
+.z-tabbox-accordion.z-tabpanel>.z-tabpanel-content {
+	border: 1px solid #f0f2dc;
+	border-top: 3px;
+	padding: 5px;
+	zoom: 1;
+	background-color: #f0f2dc;
+}
+
+.tabsitos a span {
+	background-color: #F0F2DC;
+	color: #f26b7a;
+	font-size: 12px;
+	font-weigth: bold;
+}
+
+a:hover,a:focus {
+	text-decoration: none;
 }
 
 .menuPrincipal>ul>li:hover {
@@ -111,30 +95,122 @@ element.style {
 	list-style-type: none;
 }
 
-.requisitos span {
+.carousel {
+	position: relative;
+	/* 	height: 235px; */
+}
+
+.btn {
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.42857143;
+	text-align: center;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	color: #ffffff;
+	background-color: #044159;
+	border-radius: 0px;
+}
+
+.z-tab, .z-tab:hover {
+	/* 	height: 2%; */
+	border-color: #F26B7A;
+	font-size: 16px;
 	display: block;
-	margin-bottom: -12px;
-    color: #87796f;
-    font-weight: bold;
-    /* padding: 110px; */
-  
+	line-height: 30px;
+	text-align: center;
+	position: relative;
+	float: left;
+	color: #FFF;
+	margin: 0;
+	padding-top: 1px;
+	line-height: 30px;
+	background: #87796f;
+	text-align: center;
+	position: relative;
+	cursor: pointer;
+	float: left;
+	border-top: 0px;
 }
-.seccion {
-	margin-top: 20px;
+
+.z-tabbox-accordion .z-tabpanel>.z-tabpanel-content {
+	border: 0px;
+	border-top: 0;
+	padding: 5px;
+	zoom: 1;
+	background: #f0f2dc;
+	/* 	height: 250px; */
+	padding: 0px 20px 2px 20px;
 }
 
-
-.info span{
-	
-	text-align: justify;
-
+.z-tab-text {
+	font-style: normal;
+	color: #FFF;
+	display: block;
+	padding: 20px;
+	line-height: 24px;
+	overflow: hidden;
 }
 
-.tabsitos a span {
-	background-color: #F0F2DC;
-	color: #87796F;
-	font-size: 12px;
+element.style {
+	/* 	height: 200px; */
+	display: block;
+}
+
+.z-tabbox-accordion .z-tabpanel>.z-tab {
+	border-width: 1px 1px 1px;
+	text-align: left;
+	float: none;
+	zoom: 1;
+	border-color: #F0F2DC;
+	background: #F0F2DC;
+	border-radius: 0px;
+	padding: 7px;
+}
+
+.z-tabbox-accordion>.z-tabpanels {
+	border-top: 0px;
+}
+
+.requisitos span {
+	color: #87796f;
 	font-weigth: bold;
+}
+
+.info span {
+	color: #87796f;
+}
+
+div.barra-verde span {
+	font-weigth: bold;
+	padding-top: 5px;
+	color: #87796F;
+}
+
+div.barra-verde {
+	width: 100%;
+	/* 	height: 40px; */
+	background-color: #d9eb52;
+	color: #F26B7A;
+}
+
+.container.menu {
+	width: 100%;
+	/* 	height: 450px; */
+	margin: 0px;
+	padding: 0px;
+}
+
+.z-tabbox-accordion .z-tab-text {
+	padding: 1px 1px 1px 1px;
 }
 
 #owlDemo.owl-carousel.owl-theme {
@@ -170,121 +246,3 @@ element.style {
 	top: 200px;
 	position: absolute;
 }
-
-.z-tabbox {
-   min-height: 300px !important;
-}
-
-.z-tabs{
-	
-	min-height: 300px !important;
-}
-.z-tabbox-left>.z-tabpanels {
-	border: 0px;
-	border-left: 0px;
-}
-
-.z-tabbox-accordion .z-tabpanel>.z-tab {
-	border-width: 1px 1px 1px;
-	text-align: left;
-	float: none;
-	zoom: 1;
-	border-color: #F0F2DC;
-	background-color: #F0F2DC;
-	border-radius: 4px;
-}
-
-.z-tabbox-accordion>.z-tabpanels>.z-tabpanel {
-	border: 0px;
-	padding: 2px;
-}
-
-
-.z-tabbox-left>.z-tabpanels>.z-tabpanel {
-	border: 0;
-	padding: 13px;
-}
-
-.z-tabbox-left>.z-tabs .z-tab {
-	border-width: 1px 0px 1px;
-	border-color: #F26B7A;
-	float: none;
-	border-radius: 0px !important;
-}
-
-.z-tabbox-accordion.z-tabpanel>.z-tabpanel-content {
-	border: 1px solid #f0f2dc;
-	border-top: 3px;
-	padding: 5px;
-	zoom: 1;
-	background-color: #f0f2dc;
-}
-
-.z-tab {
-	/* 	height: 2%; */
-	border-color: #F26B7A;
-	font-size: 16px;
-	display: block;
-	line-height: 30px;
-	text-align: center;
-	position: relative;
-	float: left;
-	color: #FFF;
-	margin: 0;
-	padding-top: 1px;
-	line-height: 30px;
-	background: #87796f;
-	text-align: center;
-	position: relative;
-	cursor: pointer;
-	float: left;
-	border-top: 0px;
-}
-
-.z-tabbox-accordion .z-tabpanel>.z-tabpanel-content {
-	border: 0px;
-	border-top: 0;
-	padding: 5px;
-	zoom: 1;
-		
-}
-
-
-.z-tab-text {
-	font-style: normal;
-	color: #FFF;
-	display: block;
-	padding: 20px;
-	line-height: 24px;
-	overflow: hidden;
-}
-
-
-
-.z-tabbox-accordion .z-tabpanel>.z-tab {
-	border-width: 1px 1px 1px;
-	text-align: left;
-	float: none;
-	zoom: 1;
-	border-color: #F0F2DC;
-	background-color: #F0F2DC;
-	border-radius: 4px;
-	height: 30px;
-}
-
-.z-tabbox-accordion>.z-tabpanels {
-	border-top: 0px;
-}
-
-.z-tabbox-accordion .z-tab-text {
-	padding: 1px 1px 1px 1px;
-}
-
-
-.z-tabbox-left>.z-tabs .z-tabs-content {
-	display: block;
-	height: 4096px;
-	border-right: none !important;
-	background: #87796f;
-}
-
