--- a/WebContent/views/web/participa.zul
+++ b/WebContent/views/web/participa.zul
@@ -1,8 +1,9 @@
 <zk xmlns:n="native" xmlns:w="client">
+
 	<n:link href="assets/css/web/participa.css" rel="stylesheet"
 		type="text/css">
 	</n:link>
-	<div class="participas">
+	<div class="participas animated fadeIn">
 		<div class="container-fluid">
 			<n:div id="owlDemo" sclass="owl-carousel owl-theme">
 				<div sclass="item">
@@ -28,463 +29,155 @@
 				</div>
 			</n:div>
 		</div>
-		<div class="barra-verde " align="center" style="height: 40px; padding-top:8px; ">
-			<n:h6 style="font-weight:bold;color:#87796F;">TU PUEDES SER PARTE DE LA FUNDACION</n:h6>
+		<div class="barra-verde " align="center"
+			style="height: 40px; padding-top:8px; ">
+			<n:h6 style="font-weight:bold;color:#87796F;">
+				TU PUEDES SER PARTE DE LA FUNDACION
+			</n:h6>
 		</div>
-		<div class=" menu"
-			style="background-image: url(/SmileWebApp/imagenes/portal/fondo.png); background-repeat:repeat; heigth: 50%">
-			<tabbox sclass="nav_tabs" id="tb3" orient="vertical">
-				<tabs width="25%" class="menuPrincipal">
-					<tab label="Donaciones"></tab>
-					<tab label="Voluntariado"></tab>
-					<tab label="Apadrinamiento"></tab>
-					<tab label="Ayuda"></tab>
-				</tabs>
-				<tabpanels width="75%" style="line-height:28px;min-height:173px;text-align:justify;">
-					<tabpanel>
-						<span class="requisitos">
-							INFORMACION GENERAL
-						</span>	
-						<n:br/>					
-						<span class="info">
-							Dona Una Gota de Amor Se trata de un aporte
-							económico a partir de 500 Bs. vía
-							transferencia, depósito o en efectivo por
-							nuestra sede administrativa, con la
-							frecuencia que decida la persona que
-							colabora, Además de invitar a 5 amigos o
-							familiares que se únan a éste
-							programa.Donación de cabello Hemos recibido
-							donaciones de cabello para la elaboración de
-							pelucas. En el momento oportuno,
-							anunciaremos cuando de reanudará la donación
-							de cabello
-						</span>
-					</tabpanel>
-					<tabpanel>
-						<div class=" row">
-							<div class="col s12">
-								<div class="col s6">
-									<span class="requisitos">
-										INFORMACION GENERAL
-									</span>
-									<n:br />
-									<span class="info">
-										El Voluntariado de la Fundación Amigos del Niño con Cáncer 
-										 Lara (FANCA), lo integra un grupo de personas que de forma altruista 
-										 están comprometidas con las acciones dirigidas a la atención integral
-										  a niños y  adolecentes con cáncer  y, su familia. La acción voluntaria debe ser solidaria,
-										   intencionada, organizada, sistemática y  respaldada por nuestros valores.
-									</span>
-								</div>
-								<div class=" col s6">
-								<span class="requisitos">
-										REQUISITOS
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Tener Respeto
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Ser Solidario
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Tener Compromiso
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Ser Responsable
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-										Tener Tolerancia
-										</span>
-									</span>
-									<n:br />
-									<n:br />
-									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.web.postulacion.viewmodels.VM_AbrirPostulado')">
-										<button type="button"
-											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostularVoluntario')">
-											POSTÚLATE
-										</button>										
-									</div>
-								</div>
-							</div>
-								</div>
-					</tabpanel>
-					<tabpanel>
-						<div class=" row">
-							<div class="col s12">
-								<div class="col s6">
-									<span class="requisitos">
-										INFORMACION GENERAL
-									</span>
-									<n:br />
-									<span class="info">
-										PADRINOS POR LA VIDA te brinda la oportunidad 
-										de participar en la recuperacion de los niños con cancer, de 
-										escasos recursos, mediante una colaboracion monetaria para ayudarlos con:
-										Medicinas y cateteres, tratamientos y examenes especiales, educacion y recreacion de los niños,
-										albergue a los niños en tratamiento ambulatorio y sus madres.
-									</span>
-								</div>
-								<div class=" col s6">
-									<span class="requisitos">
-										REQUISITOS
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Ser responsable con el aporte acordado.
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Querer ayudar a los niños.
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-										Correo y telefono para cualquier comunicacion.
-										</span>
-									</span>
-									<n:br />
-									<span style="color:#F26B7A"
-										class="fa fa-heart fa-1x">
-										<span style="color:#87796f">
-											Tener compromiso con el programa apadrinamiento.
-										</span>
-									</span>
-	<n:br />
-		<n:br />
-									<div class="boton text-center" apply="org.zkoss.bind.BindComposer"
-										viewModel="@id('vm') @init('ve.smile.web.postulacion.viewmodels.VM_AbrirPostulado')">
-										<button type="button"
-											class="waves-effect waves-light btn" href="" onClick="@command('abrirPostularPadrino')">
-											POSTÚLATE
-										</button>
-									</div>
-								</div>
-							</div>
-						</div>
-					</tabpanel>
-					<tabpanel>
-						<tabbox id="tb" width="100%" 
-							mold="accordion">
-							<tabs >
-								<tab  class="tabsitos"  label="AYUDA 1" />								
-								<tab class="tabsitos" label="AYUDA 2" />
-								<tab class="tabsitos" label="AYUDA 3" />
-							</tabs>
-							<tabpanels>
-								<tabpanel>
-									<div class=" row">
-										<div class="col s12">
-											<div class="col s6">
-												<span class="info">
-													Anim pariatur cliche
-													reprehendfgdfgdfgderit,
-													enim
-													eiusmodfghfghfghgfhf
-													high life accusamus
-													terry richardson ad
-													squid. 3 wolf moon
-													officia aute, non
-													cupidatat skateboard
-													dolor brunch. Food
-													truck quinoa
-													nesciunt laborum
-													eiusmod. Brunch 3
-													wolf moon tempor,
-													sutcher vice lomo.
-													Leggings occaecat
-													craft beer eiusmod.
-													Brunch 3 wolf moon
-													tempor, su id. 3
-													wolf moon officia
-													aute, non cupidatat
-													skateboard dolor
-													brunch. Food truck
-													quinoa nesciunt
-													laborum eiusmod.
-													Brunch 3 wolf moon
-													tempor, su
-												</span>
-											</div>
-											<div class=" col s6">
-										
-												<span
-													class="requisitos">
-													REQUISITOS
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5 Requisito
-														numero 5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-											</div>
-											
-										</div>
-									</div>
-								</tabpanel>
-								<tabpanel>
-									<div class=" row">
-										<div class="col s12">
-											<div class="col s6">
-												<span class="info">
-													Anim pariatur cliche
-													reprehendfgdfgdfgderit,
-													enim
-													eiusmodfghfghfghgfhf
-													high life accusamus
-													terry richardson ad
-													squid. 3 wolf moon
-													officia aute, non
-													cupidatat skateboard
-													dolor brunch. Food
-													truck quinoa
-													nesciunt laborum
-													eiusmod. Brunch 3
-													wolf moon tempor,
-													sutcher vice lomo.
-													Leggings occaecat
-													craft beer
-													farm-to-table, raw
-													denim aesthetic
-													synth nesciunt you
-													probably haven't
-													heard of them
-													accusamus labore
-													sustainable VHS.
-												</span>
-											</div>
-											<div class=" col s6">
-												<span
-													class="requisitos">
-													REQUISITOS
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5 Requisito
-														numero 5
 
-													</span>
-												</span>
-												<n:br />
+		<div class=" menu animated fadeIn"  apply="org.zkoss.bind.BindComposer" 
+			viewModel="@id('vm') @init('ve.smile.web.viewmodels.participa.VM_Participa')"
+			style="background-image: url(/SmileWebApp/imagenes/portal/fondo.png); background-repeat:repeat; heigth: 50%">
+			<tabbox sclass="nav_tabs " id="tb3" orient="vertical"
+				model="@load(vm.participa)">
+				<tabs width="25%" class="menuPrincipal "  style="    background: #87796f;">
+					<template name="model:tab">
+						<tab label="@load(each.nombre)"></tab>
+					</template>
+
+				</tabs>
+				<tabpanels width="75%"
+					style="line-height:28px;min-height:173px;text-align:justify;">
+					<template name="model:tabpanel">
+						<tabpanel >
+							<div class=" row " 
+								visible="@load(each.nombre ne 'Ayuda')">
+								<div class="col s12 ">
+									<div class="col s6">
+										<span class="requisitos">
+											INFORMACION GENERAL
+										</span>
+										<n:br />
+										<span class="info">
+											<label
+												value="@load(each.descripcion)" />
+										</span>
+									</div>
+									<div class=" col s6" visible="@load(not empty each.requisitos)">
+										<span class="requisitos">
+											REQUISITOS
+										</span>
+										<n:br />
+
+										<div
+											children="@load(each.requisitos)">
+											<template name="children">
 												<span
 													style="color:#F26B7A" class="fa fa-heart fa-1x">
 													<span
 														style="color:#87796f">
-														Requisito numero
-														5
+														<label
+															value="@load(each.descripcion)" />
 													</span>
 												</span>
 												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-											</div>
+											</template>
+										</div>
+
+										<n:br />
+										<n:br />
+										<div class="boton text-center" visible="@load(each.formulario)"
+											apply="org.zkoss.bind.BindComposer"
+											viewModel="@id('vm') @init('ve.smile.web.postulacion.viewmodels.VM_AbrirPostulado')">
+											<button type="button"
+												class="waves-effect waves-light btn" href="" visible="@load(each.tipoFormulario eq 1)"
+												onClick="@command('abrirPostularVoluntario')">
+												POSTÚLATE
+											</button>
+											<button type="button"
+												class="waves-effect waves-light btn" href="" visible="@load(each.tipoFormulario eq 0)"
+												onClick="@command('abrirPostularPadrino')">
+												POSTÚLATE
+											</button>
 										</div>
 									</div>
-								</tabpanel>
-								<tabpanel>
-									<div class=" row">
-										<div class="col s12">
-											<div class="col s6">							
-												<span class="info">
-													Anim pariatur cliche
-													reprehendfgdfgdfgderit,
-													enim
-													eiusmodfghfghfghgfhf
-													high life accusamus
-													terry richardson ad
-													squid. 3 wolf moon
-													officia aute, non
-													cupidatat skateboard
-													dolor brunch. Food
-													truck quinoa
-													nesciunt laborum
-													eiusmod. Brunch 3
-													wolf moon tempor,
-													sutcher vice lomo.
-													Leggings occaecat
-													craft beer
-													farm-to-table, raw
-													denim aesthetic
-													synth nesciunt you
-													probably haven't
-													heard of them
-													accusamus labore
-													sustainable VHS.
-												</span>
-											</div>
-											<div class=" col s6">
-												<span
-													class="requisitos">
-													REQUISITOS
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5 Requisito
-														numero 5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-												<span
-													style="color:#F26B7A" class="fa fa-heart fa-1x">
-													<span
-														style="color:#87796f">
-														Requisito numero
-														5
-													</span>
-												</span>
-												<n:br />
-											</div>
-										</div>
-									</div>
-								</tabpanel>
-							</tabpanels>
-						</tabbox>
-					</tabpanel>
+								</div>
+							</div>
+
+							<div class=" row animated fadeIn"
+								visible="@load(each.nombre eq 'Ayuda')">
+								<tabbox width="100%" mold="accordion"
+									model="@load(vm.ayudas)">
+									<tabs>
+										<template name="model:tab"
+											var="item">
+											<tab  class="tabsitos"
+												label="@load(item.nombre)" />
+										</template>
+									</tabs>
+									<tabpanels>
+										<template
+											name="model:tabpanel">
+											<tabpanel style="	background-color: #F0F2DC;">
+
+												<div class="row">
+													<div class="col s6">
+														<span class="info">
+															<label value="@load(each.descripcion)" />
+														</span>
+													</div>
+													<div
+														class="col s6" visible="@load(not empty each.requisitos)">
+														<span class="requisitos">
+															REQUISITOS
+														</span>
+														<n:br />
+
+														<div children="@load(each.requisitos)">
+															<template
+																name="children">
+																<span
+																	style="color:#F26B7A" class="fa fa-heart fa-1x">
+																	<span
+																		style="color:#87796f">
+																		<label
+																			value="@load(each.descripcion)" />
+																	</span>
+																</span>
+																<n:br />
+															</template>
+														</div>
+													</div>
+												</div>
+
+											</tabpanel>
+										</template>
+									</tabpanels>
+								</tabbox>
+							</div>
+
+						</tabpanel>
+					</template>
 				</tabpanels>
 			</tabbox>
+
 		</div>
+
 	</div>
-	<n:script type="text/javascript">	
-		$(document).ready(function(){		
-		  $('#owlDemo').owlCarousel({		
-		      navigation : true, // Show next and prev buttons
-		      slideSpeed : 300,
-		      paginationSpeed : 400,
-		      singleItem:true,
-			navigationText: [
-		      '<span sclass="fa fa-chevron-left"></span>',
-		    '<span sclass="fa fa-chevron-right"></span>'
-		      ],		
-		  });		  
-		   $('.materialboxed').materialbox();
-}); 	
-</n:script>
+
+	<n:script type="text/javascript">
+		$(document).ready(function(){ 
+		
+		$('#owlDemo').owlCarousel({
+			navigation : true,
+		 // Show next and prev buttons 
+			 slideSpeed :300, 
+			 paginationSpeed : 400, 
+			 singleItem:true, navigationText: [ '<span sclass="fa fa-chevron-left"></span>', '<span sclass="fa fa-chevron-right"></span>' ], 
+			 
+		 }); 
+		 
+		 $('.materialboxed').materialbox(); });
+	</n:script>
 </zk>
